WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249339
REGRESSION(
257861@main
?): 8X Scrolling API-Tests are constantly failing or timing out.
https://bugs.webkit.org/show_bug.cgi?id=249339
Summary
REGRESSION(257861@main?): 8X Scrolling API-Tests are constantly failing or ti...
Robert Jenner
Reported
2022-12-14 14:35:01 PST
The following 8 scrolling API-Tests are constantly failing or timing out: TestWebKitAPI.RequestTextInputContext.TextInteraction_FocusDefocusFocusAgainShouldScrollToReveal TestWebKitAPI.ScrollViewScrollabilityTests.ScrollableWithOverflowHiddenAndInputView TestWebKitAPI.RequestTextInputContext.TextInteraction_FocusingNonAssistedFocusedElementScrollsToReveal TestWebKitAPI.RequestTextInputContext.TextInteraction_FocusingReadOnlyElementShouldScrollToReveal TestWebKitAPI.KeyboardInputTests.CaretSelectionRectAfterRestoringFirstResponderWithRetainActiveFocusedState TestWebKitAPI.RequestTextInputContext.TextInteraction_FocusingElementShouldScrollToReveal TestWebKitAPI.RequestTextInputContext.TextInteraction_FocusingElementMultipleTimesShouldScrollToReveal TestWebKitAPI.KeyboardInputTests.CaretSelectionRectAfterRestoringFirstResponder HISTORY:
https://results.webkit.org/?suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&test=TestWebKitAPI.ProcessSwap.CrossOriginSystemPreview&test=TestWebKitAPI.ProcessSwap.SameOriginSystemPreview&test=TestWebKitAPI.RequestTextInputContext.TextInteraction_FocusDefocusFocusAgainShouldScrollToReveal&test=TestWebKitAPI.RequestTextInputContext.TextInteraction_FocusingElementMultipleTimesShouldScrollToReveal&test=TestWebKitAPI.RequestTextInputContext.TextInteraction_FocusingElementShouldScrollToReveal&test=TestWebKitAPI.RequestTextInputContext.TextInteraction_FocusingNonAssistedFocusedElementScrollsToReveal&test=TestWebKitAPI.RequestTextInputContext.TextInteraction_FocusingReadOnlyElementShouldScrollToReveal&test=TestWebKitAPI.ScrollViewScrollabilityTests.ScrollableWithOverflowHiddenAndInputView
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-12-14 14:35:32 PST
<
rdar://problem/103373219
>
Robert Jenner
Comment 2
2022-12-14 14:39:03 PST
I was able to reproduce these failures and timeouts at iOS 16 Debug ToT running the tests as follows: run-api-tests --ios-simulator <Insert test here> They do not fail/timeout at
257859@main
, but they do fail/timeout starting at
257863@main
. The revisions in between were not build. But my theory is that changes to iOS scrolling at
https://commits.webkit.org/257861@main
is the culprit. I will reach out to Wenson and ask.
Robert Jenner
Comment 3
2022-12-14 14:44:49 PST
Link to a test run with said timeouts/failures mentioned above:
https://build.webkit.org/#/builders/669/builds/499
Wenson Hsieh
Comment 4
2022-12-14 16:04:27 PST
Pull request:
https://github.com/WebKit/WebKit/pull/7647
EWS
Comment 5
2022-12-14 17:54:54 PST
Committed
257893@main
(3f19d05a7336): <
https://commits.webkit.org/257893@main
> Reviewed commits have been landed. Closing PR #7647 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug